WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
237205
[Tables] Incorrect table sizing when colgroup comes after tbody
https://bugs.webkit.org/show_bug.cgi?id=237205
Summary
[Tables] Incorrect table sizing when colgroup comes after tbody
alan
Reported
2022-02-25 05:56:24 PST
ssia
Attachments
Patch
(8.90 KB, patch)
2022-02-25 06:17 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(12.72 KB, patch)
2022-02-25 07:46 PST
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(12.72 KB, patch)
2022-02-25 08:41 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2022-02-25 05:56:42 PST
<
rdar://86582214
>
alan
Comment 2
2022-02-25 06:17:25 PST
Created
attachment 453208
[details]
Patch
alan
Comment 3
2022-02-25 06:23:28 PST
I am a bit puzzled though as
https://html.spec.whatwg.org/multipage/tables.html#the-colgroup-element
says: Contexts in which this element can be used: As a child of a table element, after any caption elements and before any thead, tbody, tfoot, and tr elements.
alan
Comment 4
2022-02-25 07:46:28 PST
Created
attachment 453213
[details]
Patch
alan
Comment 5
2022-02-25 08:41:46 PST
Created
attachment 453219
[details]
[fast-cq]Patch
EWS
Comment 6
2022-02-25 08:45:50 PST
Committed
r290512
(
247796@main
): <
https://commits.webkit.org/247796@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 453219
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug