[Tables] Incorrect table sizing when colgroup comes after tbody https://bugs.webkit.org/show_bug.cgi?id=237205 <rdar://86582214>

Reviewed by Antti Koivisto.

Source/WebCore:

Let's use the colgroup for table sizing even when it comes after any thead, tbody, tfoot, and tr elements.
This makes WebKit match other rendering engines (see https://src.chromium.org/viewvc/blink?revision=159442&view=revision)

Test: fast/table/table-sizing-fails-when-colgroup-comes-after-content.html

* rendering/RenderTable.cpp:
(WebCore::RenderTable::firstColumn const):
* rendering/RenderTableCol.cpp:
(WebCore::RenderTableCol::nextColumn const):

LayoutTests:

* fast/table/table-sizing-fails-when-colgroup-comes-after-content-expected.html: Added.
* fast/table/table-sizing-fails-when-colgroup-comes-after-content.html: Added.
* platform/mac/tables/mozilla_expected_failures/dom/appendCol1-expected.txt: Progression.
* platform/mac/tables/mozilla_expected_failures/dom/appendColGroup1-expected.txt: Progression.



Canonical link: https://commits.webkit.org/247796@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290512 268f45cc-cd09-0410-ab3c-d52691b4dbfc