Source/WebCore/rendering/RenderTableCol.cpp
@@ -182,13 +182,7 @@ RenderTableCol* RenderTableCol::nextColumn() const
     if (!next && is<RenderTableCol>(*parent()))
         next = parent()->nextSibling();
 
-    for (; next && !is<RenderTableCol>(*next); next = next->nextSibling()) {
-        // We allow captions mixed with columns and column-groups.
-        if (is<RenderTableCaption>(*next))
-            continue;
-
-        return nullptr;
-    }
+    for (; next && !is<RenderTableCol>(*next); next = next->nextSibling()) { }
 
     return downcast<RenderTableCol>(next);
 }
